tests/invalid/invalid-017.inox
Module Invalid017

Main() :
    var X := not 10
;
